[package]
name = "mousehook-rs"
version = "0.1.0"
edition = "2021"
email = "positive-0001@protonmail.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser","libloaderapi"] }
